--- a/jogo-memoria.html
+++ b/jogo-memoria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da memória</title>
-    <link rel="stylesheet" href="/css/jogo-memoria.css">
+    <link rel="stylesheet" href="css/jogo-memoria.css">
 </head>
 <body>
 
@@ -22,6 +22,6 @@
     <button id="reiniciar">Reiniciar </button>
     
 
-    <script src="/js/jogo-memoria.js"></script>
+    <script src="js/jogo-memoria.js"></script>
 </body>
 </html>
